# algoverse-summer-26

./: .gitignore  CITATION.cff  CLAIMS.md  COMPUTE.md  CONTRIBUTING.md  DECISIONS.md  FAILURE_LOG.md  LICENSE  Makefile  PLAN.md  PREREGISTRATION.md  PROTOCOL.md  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  experiment.yml  implementation.yml  research_claim.yml  weekly_deliverable.yml
.github/workflows/: ci.yml  paper.yml
configs/data/: README.md
configs/evaluation/: README.md
configs/experiment/: toy_cpu.json
configs/generation/: README.md
configs/model/: README.md
configs/policy/: joint.json  random.json  schedule_only.json  selection_only.json
configs/training/: README.md
data/: README.md  datasheet.md
data/fixtures/: toy_corpus.jsonl
data/manifests/: README.md
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  GLOSSARY.md  PROJECT_CONTEXT.md  REPRODUCIBILITY.md  ROADMAP.md  RUNBOOK.md  STATUS.md  TEAM.md  WORKFLOW.md
docs/evidence/: claims.yaml  closest_work.csv  sources.yaml
docs/interfaces/: chain_result.md  evaluation.md  policy.md  run_manifest.md
docs/weekly/: WEEK_1.md  WEEK_2.md  WEEK_3.md  WEEK_4.md
paper/: main.tex  references.bib
paper/figures/: README.md
paper/sections/: 01_abstract.tex  02_introduction.tex  03_related_work.tex  04_problem.tex  05_method.tex  06_experiments.tex  07_results.tex  08_limitations.tex  09_conclusion.tex
results/: README.md
schemas/: chain_result.schema.json  evaluation.schema.json  run_manifest.schema.json
scripts/: audit_repository.py  bootstrap_branches.sh  build_submission.sh  generate_tables.py  reproduce_positive_control.sh  run_chain.sh  setup_labels.sh  validate_run.py
tests/: test_analysis.py
(+32 files in other folders)
